--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-oauth/google": "^0.11.0",
     "@types/esm": "^3.2.0",
     "axios": "^1.4.0",
+    "jwt-decode": "^3.1.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
